force-app/main/default/objects/Pro_Services_Offering__c/Pro_Services_Offering__c.object-meta.xml
<CustomObject>
    <customHelp>PSOfferings_CustomHelp</customHelp>
    <description>Individual offerings that will be conducted by the Financial Education Services team.</description>
    <label>Pro Services Offering</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pro Services Offerings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>