force-app/main/default/objects/Pro_Services_Offering__c/fields/College_Access_br_Challenge_Grant__c.field-meta.xml
<CustomField>
    <fullName>College_Access_br_Challenge_Grant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if  this Professional Services event is for an organization who has received funds from the College Access Challenge Grant.</description>
    <inlineHelpText>Check this box if  this Professional Services event is for an organization who has received funds from the College Access Challenge Grant.</inlineHelpText>
    <label>College Access &lt;br&gt; Challenge Grant</label>
    <type>Checkbox</type>
</CustomField>