force-app/main/default/objects/Pro_Services_Offering__c/fields/Proposal_Submission_Details__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Submission_Details__c</fullName>
    <label>Proposal Submission Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>