force-app/main/default/objects/Pro_Services_Offering__c/fields/Proposed_Co_Presenter__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Co_Presenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposed Co-Presenter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pro Services Offerings (Proposed Co-Presenter)</relationshipLabel>
    <relationshipName>Pro_Services_Offerings1</relationshipName>
    <type>Lookup</type>
</CustomField>