force-app/main/default/objects/Pro_Services_Offering__c/fields/Proposed_Presenter__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Presenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposed Presenter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pro Services Offerings (Proposed Presenter)</relationshipLabel>
    <relationshipName>Pro_Services_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>