force-app/main/default/objects/Pro_Services_Offering__c/fields/PS_OfferingAccount__c.field-meta.xml
<CustomField>
    <fullName>PS_OfferingAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What account is this event related to?</description>
    <inlineHelpText>If this Offering is related to a specific Account (college, university, lender or association), please use this lookup field to select the appropriate Account.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>PS_OfferingAccount</relationshipName>
    <type>Lookup</type>
</CustomField>