force-app/main/default/objects/Pro_Services_Offering__c/fields/PS_OfferingActualAttendees__c.field-meta.xml
<CustomField>
    <fullName>PS_OfferingActualAttendees__c</fullName>
    <description>Number of attendees anticipated for this event</description>
    <inlineHelpText>Please indicate the number of individuals expected to attend this Offering. Once this Offering has been completed, this field will be updated to indicate the actual number of individuals who attended this Offering.</inlineHelpText>
    <label>Actual Attendees</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>