force-app/main/default/objects/Pro_Services_Offering__c/fields/PS_OfferingAddress1__c.field-meta.xml
<CustomField>
    <fullName>PS_OfferingAddress1__c</fullName>
    <description>What is the street address for this event&#39;s location?</description>
    <label>Address (line 1)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>