force-app/main/default/objects/Pro_Services_Offering__c/fields/PS_OfferingAddress2__c.field-meta.xml
<CustomField>
    <fullName>PS_OfferingAddress2__c</fullName>
    <description>What is the second line of the street address for this event&#39;s location?</description>
    <label>Address (line 2)</label>
    <length>150</length>
    <type>Text</type>
</CustomField>