force-app/main/default/objects/Pro_Services_Offering__c/fields/PS_OfferingAssignedTo__c.field-meta.xml
<CustomField>
    <fullName>PS_OfferingAssignedTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who has been assigned to this event?</description>
    <inlineHelpText>This is the ProServices@ASA team member who has been assigned to conduct this Offering.</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PS_OfferingAssignedTo</relationshipName>
    <type>Lookup</type>
</CustomField>