force-app/main/default/objects/Pro_Services_Offering__c/fields/PS_OfferingCampaign__c.field-meta.xml
<CustomField>
    <fullName>PS_OfferingCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What campaign is this event related to?</description>
    <inlineHelpText>If this Offering is related to a specific Campaign, please use this lookup field to select the appropriate Campaign.</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>PS_OfferingCampaign</relationshipName>
    <type>Lookup</type>
</CustomField>