force-app/main/default/objects/Pro_Services_Offering__c/fields/PS_OfferingCity__c.field-meta.xml
<CustomField>
    <fullName>PS_OfferingCity__c</fullName>
    <description>What is the city where this event will be held?</description>
    <label>City</label>
    <length>150</length>
    <type>Text</type>
</CustomField>