force-app/main/default/objects/Pro_Services_Offering__c/fields/PS_OfferingCompleted__c.field-meta.xml
<CustomField>
    <fullName>PS_OfferingCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator as to whether or not a ProServices event has been completed.</description>
    <label>Completed?</label>
    <type>Checkbox</type>
</CustomField>