force-app/main/default/objects/Pro_Services_Offering__c/fields/PS_OfferingDeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>PS_OfferingDeliveryMethod__c</fullName>
    <description>How will this offering be conducted?</description>
    <inlineHelpText>Please select the desired delivery method for this Offering.</inlineHelpText>
    <label>Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Webex</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Conference Call</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Postal Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>