force-app/main/default/objects/Pro_Services_Offering__c/fields/PS_OfferingDescriptoin__c.field-meta.xml
<CustomField>
    <fullName>PS_OfferingDescriptoin__c</fullName>
    <description>Please enter any relevant information about the offering.</description>
    <label>Description</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>