force-app/main/default/objects/Pro_Services_Offering__c/fields/PS_OfferingLocationName__c.field-meta.xml
<CustomField>
    <fullName>PS_OfferingLocationName__c</fullName>
    <description>What is the name of the site where the offering will be held?</description>
    <inlineHelpText>What is the name of the site where the offering will be held? (This is used for tracking purposes and to help ensure the ProServices@ASA team member shows up at the correct location.)</inlineHelpText>
    <label>Location Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>