force-app/main/default/objects/Pro_Services_Offering__c/fields/PS_OfferingOpportunity__c.field-meta.xml
<CustomField>
    <fullName>PS_OfferingOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What opportunity is this offering related to?</description>
    <inlineHelpText>If this Offering is related to a specific Opportunity, please use this lookup field to select that Opportunity.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>PS_OfferingOpportunity</relationshipName>
    <type>Lookup</type>
</CustomField>