force-app/main/default/objects/Pro_Services_Offering__c/fields/PS_OfferingRequestedBy__c.field-meta.xml
<CustomField>
    <fullName>PS_OfferingRequestedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Please identify the ASA team member who is requesting this event.</description>
    <inlineHelpText>Please identify the ASA team member who is requesting this event.</inlineHelpText>
    <label>Requested By (ASA)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PS_OfferingRequestedBy</relationshipName>
    <type>Lookup</type>
</CustomField>