force-app/main/default/objects/Pro_Services_Offering__c/fields/PS_OfferingRequestedPresenter__c.field-meta.xml
<CustomField>
    <fullName>PS_OfferingRequestedPresenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If there is a specific individual that you would like to conduct this offering, please indicate your choice here. Otherwise, leave this blank.</description>
    <inlineHelpText>If there is a specific individual that you would like to conduct this offering, please indicate your choice here. Otherwise, leave this blank.</inlineHelpText>
    <label>Requested Presenter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PS_OfferingRequestedPresenter</relationshipName>
    <type>Lookup</type>
</CustomField>