force-app/main/default/objects/Pro_Services_Offering__c/fields/PS_OfferingState__c.field-meta.xml
<CustomField>
    <fullName>PS_OfferingState__c</fullName>
    <description>What is the 2-digit state code for the location where this offering will be held?</description>
    <inlineHelpText>Please enter the 2 character state abbreviation for this Offering. This is primarily used for reporting by the ProServices@ASA team.</inlineHelpText>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>