force-app/main/default/objects/Pro_Services_Offering__c/fields/PS_OfferingStatus__c.field-meta.xml
<CustomField>
    <fullName>PS_OfferingStatus__c</fullName>
    <description>What is the current status of this offering request?</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>