force-app/main/default/objects/Pro_Services_Offering__c/fields/PS_OfferingSubStatus__c.field-meta.xml
<CustomField>
    <fullName>PS_OfferingSubStatus__c</fullName>
    <description>What is the sub-status of this offering?</description>
    <label>Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PS_OfferingStatus__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Waiting to be Submitted for Approval</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Submitted for ProServices Approval</fullName>
            </value>
            <value>
                <fullName>Additional Information Requested</fullName>
            </value>
            <value>
                <fullName>High Priority</fullName>
            </value>
            <value>
                <fullName>Standard Priority</fullName>
            </value>
            <value>
                <fullName>Low Priority</fullName>
            </value>
            <value>
                <fullName>Lack of Resources</fullName>
            </value>
            <value>
                <fullName>Priority Override</fullName>
            </value>
            <value>
                <fullName>Lack of Registration</fullName>
            </value>
            <value>
                <fullName>Event Cancelled</fullName>
            </value>
            <value>
                <fullName>Changed Topic</fullName>
            </value>
            <value>
                <fullName>Waiting for ProServices Approval</fullName>
            </value>
            <value>
                <fullName>Waiting for Strategic Services Approval</fullName>
            </value>
            <value>
                <fullName>No Response From Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>