force-app/main/default/objects/Pro_Services_Offering__c/fields/PS_OfferingTargetDate__c.field-meta.xml
<CustomField>
    <fullName>PS_OfferingTargetDate__c</fullName>
    <description>What is the target date for this offering?</description>
    <inlineHelpText>This field contains the date requested for this Offering. This date may change depending on intervening factors and the availability of resources to accommodate your request.</inlineHelpText>
    <label>Target Date</label>
    <type>Date</type>
</CustomField>