force-app/main/default/objects/Pro_Services_Offering__c/fields/PS_OfferingTopic__c.field-meta.xml
<CustomField>
    <fullName>PS_OfferingTopic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What is the topic of this offering?</description>
    <inlineHelpText>Each offering must be related to a specific Topic offered by the ProServices@ASA team. If an existing Topic does not meet your needs, you may select New Topic Request to request that the ProServices@ASA team create a new Topic for you.</inlineHelpText>
    <label>Pro Services Topic</label>
    <referenceTo>Pro_Services_Topic__c</referenceTo>
    <relationshipLabel>Pro Services Offerings</relationshipLabel>
    <relationshipName>PS_OfferingTopic</relationshipName>
    <type>Lookup</type>
</CustomField>