force-app/main/default/objects/Pro_Services_Offering__c/fields/Spanish__c.field-meta.xml
<CustomField>
    <fullName>Spanish__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When PS offerings are delivered in Spanish</description>
    <inlineHelpText>Is the session being delivered in Spanish? If yes check box</inlineHelpText>
    <label>Spanish</label>
    <type>Checkbox</type>
</CustomField>