force-app/main/default/objects/Pro_Services_Offering__c/fields/Submission_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Submission_Deadline__c</fullName>
    <label>Submission Deadline</label>
    <type>Date</type>
</CustomField>