force-app/main/default/objects/Pro_Services_Offering__c/recordTypes/Advisory_Board.recordType-meta.xml
<RecordType>
    <fullName>Advisory_Board</fullName>
    <active>true</active>
    <description>ASA Advisory Board</description>
    <label>Advisory Board</label>
</RecordType>