force-app/main/default/objects/Pro_Services_Offering__c/recordTypes/Article.recordType-meta.xml
<RecordType>
    <fullName>Article</fullName>
    <active>false</active>
    <description>Newsletter article submissions</description>
    <label>Article</label>
</RecordType>