force-app/main/default/objects/Pro_Services_Offering__c/recordTypes/Campus_Engagement.recordType-meta.xml
<RecordType>
    <fullName>Campus_Engagement</fullName>
    <active>true</active>
    <description>Any of the offerings related to the campus engagement process; the consultation call, stakeholder meeting, post-launch call, quarterly check-in call, campus event, faculty/staff training, SALT ambassador program, or faculty/staff/student SALT training</description>
    <label>Campus Engagement</label>
</RecordType>