force-app/main/default/objects/Pro_Services_Offering__c/recordTypes/Client_Events.recordType-meta.xml
<RecordType>
    <fullName>Client_Events</fullName>
    <active>true</active>
    <description>Any open enrollment training opportunities for SALT Partner Clients.</description>
    <label>Client Events</label>
</RecordType>