force-app/main/default/objects/Pro_Services_Offering__c/recordTypes/Community_Outreach.recordType-meta.xml
<RecordType>
    <fullName>Community_Outreach</fullName>
    <active>true</active>
    <description>Any of the training sessions offered as part of the College Access Challenge Grant program, NT4CM, or ASA internal training events as well as the media support we provide to Alle from time to time</description>
    <label>Community Outreach</label>
</RecordType>