force-app/main/default/objects/Pro_Services_Offering__c/recordTypes/ConferencePresentation.recordType-meta.xml
<RecordType>
    <fullName>ConferencePresentation</fullName>
    <active>true</active>
    <description>Any presentation being made at a state, regional, or national conference event.</description>
    <label>Conference Presentation</label>
</RecordType>