force-app/main/default/objects/Pro_Services_Offering__c/recordTypes/Consultation.recordType-meta.xml
<RecordType>
    <fullName>Consultation</fullName>
    <active>false</active>
    <description>Consultation Event Request</description>
    <label>Consultation</label>
</RecordType>