force-app/main/default/objects/Pro_Services_Offering__c/recordTypes/Financial_Education_Messaging.recordType-meta.xml
<RecordType>
    <fullName>Financial_Education_Messaging</fullName>
    <active>false</active>
    <label>Financial Education Messaging</label>
</RecordType>