force-app/main/default/objects/Pro_Services_Offering__c/recordTypes/My_Money_101.recordType-meta.xml
<RecordType>
    <fullName>My_Money_101</fullName>
    <active>false</active>
    <label>My Money 101</label>
</RecordType>