force-app/main/default/objects/Pro_Services_Offering__c/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>false</active>
    <description>Some other strange and unusual type of event. Use this only as a last resort!</description>
    <label>Other</label>
</RecordType>