force-app/main/default/objects/Pro_Services_Offering__c/recordTypes/Partner_Engagement.recordType-meta.xml
<RecordType>
    <fullName>Partner_Engagement</fullName>
    <active>true</active>
    <description>Partner Engagement Record Type added 8/24/2015</description>
    <label>Partner Engagement</label>
</RecordType>