force-app/main/default/objects/Pro_Services_Offering__c/recordTypes/Pre_Sales_Support.recordType-meta.xml
<RecordType>
    <fullName>Pre_Sales_Support</fullName>
    <active>true</active>
    <description>Any SALT/MM101 pre-sales support</description>
    <label>Pre-Sales Support</label>
</RecordType>