force-app/main/default/objects/Pro_Services_Offering__c/recordTypes/Training.recordType-meta.xml
<RecordType>
    <fullName>Training</fullName>
    <active>true</active>
    <description>Any training event being presented to a SALT school client who has officially received training as part of their SOW (excludes any SALT-specific training that would be submitted under campus engagement)</description>
    <label>Training</label>
</RecordType>