force-app/main/default/objects/Pro_Services_Offering__c/recordTypes/WebEx.recordType-meta.xml
<RecordType>
    <fullName>WebEx</fullName>
    <active>true</active>
    <description>Student and staff webinars associated with our monthly webinar series</description>
    <label>WebEx</label>
</RecordType>