force-app/main/default/objects/Pro_Services_Offering__c/recordTypes/Workshop.recordType-meta.xml
<RecordType>
    <fullName>Workshop</fullName>
    <active>false</active>
    <description>A day-long workshop on a single topic. (Full-day sessions with mulitple topics should be entered as individual Offerings for each Topic.)</description>
    <label>Workshop</label>
</RecordType>