force-app/main/default/objects/Pro_Services_Offering__c/validationRules/Target_date_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Target_date_validation_rule</fullName>
    <active>false</active>
    <errorConditionFormula>RecordType.Name  != &#39;Conference Presentation&#39; &amp;&amp;  ISBLANK(PS_OfferingTargetDate__c)</errorConditionFormula>
    <errorDisplayField>PS_OfferingTargetDate__c</errorDisplayField>
    <errorMessage>Target Date is a required field</errorMessage>
</ValidationRule>