force-app/main/default/objects/Pro_Services_Offering__c/listViews/AllOfferingsnotcompleted.listView-meta.xml
<ListView>
    <fullName>AllOfferingsnotcompleted</fullName>
    <columns>NAME</columns>
    <columns>PS_OfferingTargetDate__c</columns>
    <columns>PS_OfferingStatus__c</columns>
    <columns>PS_OfferingRequestedPresenter__c</columns>
    <columns>PS_OfferingAssignedTo__c</columns>
    <columns>PS_OfferingState__c</columns>
    <columns>PS_OfferingCompleted__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PS_OfferingCompleted__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
        <value>Pro_Services_Offering__c.Article</value>
    </filters>
    <filters>
        <field>PS_OfferingStatus__c</field>
        <operation>notEqual</operation>
        <value>Denied,Cancelled</value>
    </filters>
    <label>All Offerings (not completed)</label>
</ListView>