force-app/main/default/objects/Pro_Services_Offering__c/listViews/AllOfferingsupcomingonly.listView-meta.xml
<ListView>
    <fullName>AllOfferingsupcomingonly</fullName>
    <columns>NAME</columns>
    <columns>PS_OfferingTopic__c</columns>
    <columns>PS_OfferingTargetDate__c</columns>
    <columns>PS_OfferingAssignedTo__c</columns>
    <columns>PS_OfferingStatus__c</columns>
    <columns>PS_OfferingState__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PS_OfferingStatus__c</field>
        <operation>notEqual</operation>
        <value>Denied,Cancelled</value>
    </filters>
    <filters>
        <field>PS_OfferingTargetDate__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>All Offerings (upcoming only)</label>
</ListView>