force-app/main/default/objects/Pro_Services_Offering__c/listViews/Lorri_s_Offerings.listView-meta.xml
<ListView>
    <fullName>Lorri_s_Offerings</fullName>
    <columns>NAME</columns>
    <columns>PS_OfferingAccount__c</columns>
    <columns>PS_OfferingDescriptoin__c</columns>
    <columns>PS_OfferingRequestedBy__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PS_OfferingAssignedTo__c</field>
        <operation>equals</operation>
        <value>Connor</value>
    </filters>
    <label>Lorri&#39;s Offerings</label>
</ListView>