force-app/main/default/objects/Pro_Services_Offering__c/listViews/OfferingsArticlesOnly.listView-meta.xml
<ListView>
    <fullName>OfferingsArticlesOnly</fullName>
    <columns>NAME</columns>
    <columns>PS_OfferingTargetDate__c</columns>
    <columns>PS_OfferingStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Pro_Services_Offering__c.Article</value>
    </filters>
    <label>Offerings (Articles Only)</label>
</ListView>