force-app/main/default/objects/Pro_Services_Offering__c/listViews/OfferingsByStatusDeniedCancelled.listView-meta.xml
<ListView>
    <fullName>OfferingsByStatusDeniedCancelled</fullName>
    <columns>NAME</columns>
    <columns>PS_OfferingTopic__c</columns>
    <columns>PS_OfferingTargetDate__c</columns>
    <columns>PS_OfferingRequestedBy__c</columns>
    <columns>PS_OfferingState__c</columns>
    <columns>PS_OfferingSubStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PS_OfferingStatus__c</field>
        <operation>equals</operation>
        <value>Denied,Cancelled</value>
    </filters>
    <label>Offerings By Status (Denied/Cancelled)</label>
</ListView>