force-app/main/default/objects/Pro_Services_Offering__c/listViews/PSOfferingsArticleApprovalQueue.listView-meta.xml
<ListView>
    <fullName>PSOfferingsArticleApprovalQueue</fullName>
    <filterScope>Queue</filterScope>
    <label>PS Offerings - Article Approval Queue</label>
    <queue>PSOfferingsArticleApprovalQueue</queue>
</ListView>