force-app/main/default/objects/Pro_Services_Offering__c/listViews/UnsubmittedOfferings.listView-meta.xml
<ListView>
    <fullName>UnsubmittedOfferings</fullName>
    <columns>PS_OfferingRequestedBy__c</columns>
    <columns>NAME</columns>
    <columns>PS_OfferingTopic__c</columns>
    <columns>PS_OfferingTargetDate__c</columns>
    <columns>PS_OfferingState__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PS_OfferingStatus__c</field>
        <operation>notEqual</operation>
        <value>Pending Approval,Approved,Denied,Cancelled</value>
    </filters>
    <label>Unsubmitted Offerings</label>
</ListView>