force-app/main/default/objects/Pro_Services_Offering__c/listViews/UpcomingEventswNewTopicRequests.listView-meta.xml
<ListView>
    <fullName>UpcomingEventswNewTopicRequests</fullName>
    <columns>NAME</columns>
    <columns>PS_OfferingRequestedBy__c</columns>
    <columns>PS_OfferingTargetDate__c</columns>
    <columns>PS_OfferingAssignedTo__c</columns>
    <columns>PS_OfferingState__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PS_OfferingTopic__c</field>
        <operation>equals</operation>
        <value>New Topic Request</value>
    </filters>
    <filters>
        <field>PS_OfferingCompleted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Upcoming Events w/New Topic Requests</label>
    <sharedTo>
        <group>ASAProfessionalServices</group>
    </sharedTo>
</ListView>