force-app/main/default/objects/Pro_Services_Offering__c/listViews/UpcomingOfferingsByStatusApproved.listView-meta.xml
<ListView>
    <fullName>UpcomingOfferingsByStatusApproved</fullName>
    <columns>NAME</columns>
    <columns>PS_OfferingTopic__c</columns>
    <columns>PS_OfferingTargetDate__c</columns>
    <columns>PS_OfferingCompleted__c</columns>
    <columns>PS_OfferingRequestedBy__c</columns>
    <columns>PS_OfferingState__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PS_OfferingStatus__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>PS_OfferingCompleted__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>PS_OfferingTargetDate__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2012</value>
    </filters>
    <label>Upcoming Offerings By Status (Approved)</label>
</ListView>